Builds in ubuntu
1. Correct include directories
2. Make SDL2 compliant.
3. Update README.md
4. Remove memcpy_s as something poorly supported in g++
   or clang++.

--- a/projects/g++/Menge/MengeVis/CMakeLists.txt
+++ b/projects/g++/Menge/MengeVis/CMakeLists.txt
@@ -4,42 +4,18 @@ project(MENGE_VIS)
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${MENGE_EXE_DIR})
 
-# Move this stuff to MengeVis
-FIND_PACKAGE(SDL2)
-if(NOT SDL2_FOUND)
-	message(STATUS "I will try to link against local libraries")
-	INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/include)
-	LINK_DIRECTORIES  (${MENGE_SRC_DIR}/lib)
-	SET(SDL_LIBRARY "SDL2")
-	SET(SDLMAIN_LIBRARY "SDL2main")
-else()
-	INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
-endif()
+INCLUDE(FindPkgConfig)
+PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
+INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
 
-FIND_PACKAGE(SDL_ttf)
-if(NOT SDLTTF_FOUND)
-	MESSAGE(STATUS "I will try to link against local libraries")
-	INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/include)
-	LINK_DIRECTORIES  (${MENGE_SRC_DIR}/lib)
-	SET(SDLTTF_LIBRARY "SDL_ttf")
-else()
-	INCLUDE_DIRECTORIES(${SDLTTF_INCLUDE_DIR})
-endif()
+PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
+INCLUDE_DIRECTORIES(${SDL2IMAGE_INCLUDE_DIRS})
 
-FIND_PACKAGE(SDL_image)
-if(NOT SDLIMAGE_FOUND)
-	message(STATUS "I will try to link against local libraries")
-	INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/include)
-	LINK_DIRECTORIES  (${MENGE_SRC_DIR}/lib)
-	SET(SDLIMAGE_LIBRARY SDL_image)
-else()
-	INCLUDE_DIRECTORIES(${SDLIMAGE_INCLUDE_DIR})
-endif()
+PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)
+INCLUDE_DIRECTORIES(${SDL2TTF_INCLUDE_DIRS})
 
 FIND_PACKAGE(OpenGL REQUIRED)
 INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS})
-
-FIND_PACKAGE(PNG REQUIRED)
 
 file(
 	GLOB_RECURSE
@@ -48,7 +24,6 @@ file(
 	${MENGE_SRC_DIR}/MengeVis/*.h
 )
 
-
 add_library(
 	mengeVis
 	SHARED
@@ -56,6 +31,14 @@ add_library(
 	${source_files}
 )
 
-target_link_libraries ( mengeVis mengeCore dl tinyxml ${OPENGL_LIBRARIES} ${SDL_LIBRARY} ${PNG_LIBRARY}  ${SDLIMAGE_LIBRARY}  ${SDLTTF_LIBRARY} )
+target_link_libraries ( mengeVis
+  mengeCore
+  dl
+  tinyxml
+  ${OPENGL_LIBRARIES}
+  ${SDL2_LIBRARIES}
+  ${SDL2IMAGE_LIBRARIES}
+  ${SDL2TTF_LIBRARIES}
+  )
 
 install( TARGETS mengeVis DESTINATION ${LIBRARY_OUTPUT_PATH} )
