--- a/projects/g++/Plugins/CMakeLists.txt
+++ b/projects/g++/Plugins/CMakeLists.txt
@@ -15,8 +15,8 @@ set(MENGE_LIB_DIR ${CMAKE_BINARY_DIR}/lib )
 link_directories( ${MENGE_LIB_DIR}/)
 
 INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/)
-INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/include)
-INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/tinyxml)
+INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/../include)
+INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/../)
 
 set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fpermissive -std=c++11" )
 set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11" )
