Initial implementation of ExternalEventTrigger
1. This adds a new event trigger -- its condition is predicated on some
   arbitrary code explicitly activating it.
2. Updated trigger and its factory so that all triggers have names.
3. Updated the event system to handle external triggers specially so they
   can be accessed from outside.

--- a/projects/VS2015/Menge/MengeCore.vcxproj.filters
+++ b/projects/VS2015/Menge/MengeCore.vcxproj.filters
@@ -609,6 +609,12 @@
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\AgentGenerators\NavMeshAgentGenerator.cpp">
       <Filter>Source Files\Agents\AgentGenerators</Filter>
     </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\EventTriggerExternal.cpp">
+      <Filter>Source Files\Agents\Events</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\EventTriggerFactory.cpp">
+      <Filter>Source Files\Agents\Events</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\mengeCore\Core.h">
@@ -1189,6 +1195,9 @@
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeCore\Agents\AgentGenerators\NavMeshAgentGenerator.h">
       <Filter>Header Files\Agents\AgentGenerators</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\EventTriggerExternal.h">
+      <Filter>Header Files\Agents\Events</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
