--- a/projects/VS2015/Menge/MengeVis.vcxproj
+++ b/projects/VS2015/Menge/MengeVis.vcxproj
@@ -61,6 +61,7 @@
     <ClCompile Include="$(SrcDir)\MengeVis\PluginEngine\VisPluginEngine.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VisAgent\VisAgent.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VisAgent\VisAgentDatabase.cpp" />
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\EventInjectContext.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\SimSystem.h" />
