--- a/projects/VS2015/Menge/MengeVis.vcxproj.filters
+++ b/projects/VS2015/Menge/MengeVis.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VisAgent\VisAgent.cpp">
       <Filter>Source Files\Runtime\VisAgent</Filter>
     </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\EventInjectContext.cpp">
+      <Filter>Source Files\Runtime</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\SimSystem.h">
