Add new event effect -- move agents to target state
1. This event effect moves agents from their current state to a target state
(as determined by a StateSelector).
2. Updated the userEvent to exercse this functionality.

--- a/projects/VS2015/Menge/MengeCore.vcxproj.filters
+++ b/projects/VS2015/Menge/MengeCore.vcxproj.filters
@@ -615,6 +615,9 @@
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\EventTriggerFactory.cpp">
       <Filter>Source Files\Agents\Events</Filter>
     </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\EventEffectAgentState.cpp">
+      <Filter>Source Files\Agents\Events</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\mengeCore\Core.h">
@@ -1197,6 +1200,9 @@
       <Filter>Header Files\Agents\AgentGenerators</Filter>
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\EventTriggerExternal.h">
+      <Filter>Header Files\Agents\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\EventEffectAgentState.h">
       <Filter>Header Files\Agents\Events</Filter>
     </ClInclude>
   </ItemGroup>
