--- a/projects/VS2015/Menge/MengeCore.vcxproj.filters
+++ b/projects/VS2015/Menge/MengeCore.vcxproj.filters
@@ -609,6 +609,18 @@
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\AgentGenerators\NavMeshAgentGenerator.cpp">
       <Filter>Source Files\Agents\AgentGenerators</Filter>
     </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\EventTriggerExternal.cpp">
+      <Filter>Source Files\Agents\Events</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\EventTriggerFactory.cpp">
+      <Filter>Source Files\Agents\Events</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\EventEffectAgentState.cpp">
+      <Filter>Source Files\Agents\Events</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\TargetAgentById.cpp">
+      <Filter>Source Files\Agents\Events</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\mengeCore\Core.h">
@@ -1189,6 +1201,15 @@
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeCore\Agents\AgentGenerators\NavMeshAgentGenerator.h">
       <Filter>Header Files\Agents\AgentGenerators</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\EventTriggerExternal.h">
+      <Filter>Header Files\Agents\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\EventEffectAgentState.h">
+      <Filter>Header Files\Agents\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\TargetAgentById.h">
+      <Filter>Header Files\Agents\Events</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
