fixes #62. related to #60

--- a/projects/g++/CMakeLists.txt
+++ b/projects/g++/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(FULL_MENGE_PED_SIM)
-
+if(APPLE)
+    set(CMAKE_MACOSX_RPATH ON)
+endif()
+add_definitions(-std=c++11)
 # Model dlls
 ADD_SUBDIRECTORY(Menge)
 ADD_SUBDIRECTORY(Plugins)
