--- a/projects/g++/Menge/CMakeLists.txt
+++ b/projects/g++/Menge/CMakeLists.txt
@@ -12,8 +12,7 @@ INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/)
 INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/../include)
 INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/../)
 
-set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fpermissive -std=c++11" )
-set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11" )
+set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fpermissive" )
 
 #find the correct OpenMP flag
 FIND_PACKAGE(OpenMP)
