--- a/projects/g++/Plugins/CMakeLists.txt
+++ b/projects/g++/Plugins/CMakeLists.txt
@@ -18,8 +18,7 @@ INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/)
 INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/../include)
 INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/../)
 
-set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fpermissive -std=c++11" )
-set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11" )
+set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fpermissive" )
 
 #find the correct OpenMP flag
 FIND_PACKAGE(OpenMP)
