Remove superfluous trailing backslash in userProps
The definition of $MengeSrc in pluginMacros.props had a trailing back
slash. Apparently, this can cause problems in some configurations of
visual studio/windows.

--- a/projects/VS2013/pluginMacros.props
+++ b/projects/VS2013/pluginMacros.props
@@ -3,7 +3,7 @@
   <ImportGroup Label="PropertySheets">
   </ImportGroup>
   <PropertyGroup Label="UserMacros" >
-    <MengeSrc>$(SolutionDir)..\..\..\src\Menge\</MengeSrc>
+    <MengeSrc>$(SolutionDir)..\..\..\src\Menge</MengeSrc>
     <MengeLib>$(SolutionDir)..\Menge\build\lib</MengeLib>
     <PluginSrc>$(SolutionDir)..\..\..\src\Plugins</PluginSrc>
   </PropertyGroup>
