--- a/projects/VS2013/Menge/MengeCore.vcxproj
+++ b/projects/VS2013/Menge/MengeCore.vcxproj
@@ -362,6 +362,7 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\EventEffectAgentState.cpp" />
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\TargetAgentById.cpp" />
     <ClCompile Include="$(SrcDir)\MengeCore\ProjectSpec.cpp" />
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_random.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\mengeCore\Core.h" />
@@ -561,6 +562,8 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\EventEffectAgentState.h" />
     <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\TargetAgentById.h" />
     <ClInclude Include="$(SrcDir)\MengeCore\ProjectSpec.h" />
+    <ClInclude Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_random.h" />
+    <ClInclude Include="$(SrcDir)\MengeCore\data_set_selector.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="tinyxml_lib.vcxproj">
