--- a/projects/VS2013/Menge/MengeCore.vcxproj.filters
+++ b/projects/VS2013/Menge/MengeCore.vcxproj.filters
@@ -624,6 +624,9 @@
     <ClCompile Include="$(SrcDir)\MengeCore\ProjectSpec.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_random.cpp">
+      <Filter>Source Files\Agents\ProfileSelectors</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\mengeCore\Core.h">
@@ -1215,6 +1218,12 @@
       <Filter>Header Files\Agents\Events</Filter>
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeCore\ProjectSpec.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_random.h">
+      <Filter>Header Files\Agents\ProfileSelectors</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeCore\data_set_selector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
