--- a/projects/VS2013/Menge/MengeCore.vcxproj
+++ b/projects/VS2013/Menge/MengeCore.vcxproj
@@ -363,6 +363,7 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\Events\TargetAgentById.cpp" />
     <ClCompile Include="$(SrcDir)\MengeCore\ProjectSpec.cpp" />
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_random.cpp" />
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_weighted.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\mengeCore\Core.h" />
@@ -563,6 +564,7 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClInclude Include="$(SrcDir)\MengeCore\Agents\Events\TargetAgentById.h" />
     <ClInclude Include="$(SrcDir)\MengeCore\ProjectSpec.h" />
     <ClInclude Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_random.h" />
+    <ClInclude Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_weighted.h" />
     <ClInclude Include="$(SrcDir)\MengeCore\data_set_selector.h" />
   </ItemGroup>
   <ItemGroup>
