--- a/projects/VS2013/Menge/MengeCore.vcxproj.filters
+++ b/projects/VS2013/Menge/MengeCore.vcxproj.filters
@@ -627,6 +627,9 @@
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_random.cpp">
       <Filter>Source Files\Agents\ProfileSelectors</Filter>
     </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_weighted.cpp">
+      <Filter>Source Files\Agents\ProfileSelectors</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\mengeCore\Core.h">
@@ -1221,6 +1224,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_random.h">
+      <Filter>Header Files\Agents\ProfileSelectors</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeCore\Agents\ProfileSelectors\profile_selector_weighted.h">
       <Filter>Header Files\Agents\ProfileSelectors</Filter>
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeCore\data_set_selector.h">
