Adds some characterization test for SimulationInterface

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,12 +1,15 @@
 find_package(Threads REQUIRED)
 
+project(mengeTests)
+
 # Enable ExternalProject CMake module
 include(ExternalProject)
 
 # Download and install GoogleTest
 ExternalProject_Add(
     gtest
-    URL https://github.com/google/googletest/archive/master.zip
+     URL https://github.com/google/googletest/archive/release-1.8.0.zip
+#    URL https://github.com/google/googletest/archive/master.zip
     PREFIX ${CMAKE_CURRENT_BINARY_DIR}/gtest
     # Disable install step
     INSTALL_COMMAND ""
@@ -38,5 +41,7 @@ set_target_properties(libgmock PROPERTIES
 # I couldn't make it work with INTERFACE_INCLUDE_DIRECTORIES
 include_directories("${source_dir}/googletest/include"
                     "${source_dir}/googlemock/include")
+
+
 
 add_subdirectory(MengeCore)
