--- a/src/test/MengeCore/CMakeLists.txt
+++ b/src/test/MengeCore/CMakeLists.txt
@@ -2,13 +2,17 @@ file(GLOB SRCS *.cpp)
 
 ADD_EXECUTABLE(mengeCoreTest ${SRCS})
 
+
 TARGET_LINK_LIBRARIES(
   mengeCoreTest
-  #testfoo
-  #  libfoo
-      libgtest
-     libgmock
-  )
+  mengeCore
+  libgtest
+  libgmock
+)
+
+
+include_directories("../../Menge")
+
 
 add_test(NAME mengeCoreTest
   COMMAND mengeCoreTest)
