--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-cmake-build-debug
-debug/
+*debug/
 Exe/
 release/
 doc/
@@ -19,45 +18,4 @@ ipch/
 doc/output
 doc/tags
 examples/**/*.png
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
 src/thirdParty/googletest
