--- a/projects/g++/Makefile
+++ b/projects/g++/Makefile
@@ -40,8 +40,10 @@ clean-release:
 clean-debug:
 	( cd build/debug && $(MAKE) --no-print-directory clean )
 
-test:
+test-debug:
 	( cd build/debug && cmake -DCMAKE_BUILD_TYPE=debug ../.. && $(MAKE) --no-print-directory && make --no-print-directory test)
+#	ctags -R  --language-force=c++ *.*
+#	ctags -eR  --language-force=c++ *.*
 
 #release:
 #	( cd build/release && cmake -DCMAKE_BUILD_TYPE=release ../.. && $(MAKE) --no-print-directory && make  --no-print-directory install)
