Update event trigger based on state population
 - Removes the old StatePopIncreaseTrigger (and factory); it was a one
   trick pony.
 - Add the new StatePopulationTrigger that does what the old trigger did.
   In addition, it can do other things.
 - Update examples to make use of the replacement trigger.
 - add new examples for the new trigger.

NOTE: This does not provide unit tests.

--- a/projects/VS2013/Menge/MengeCore.vcxproj
+++ b/projects/VS2013/Menge/MengeCore.vcxproj
@@ -247,6 +247,7 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\EventTriggerDB.cpp" />
     <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\StateEvtTrigger.cpp" />
     <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\StateMemberTarget.cpp" />
+    <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\state_population_trigger.cpp" />
     <ClCompile Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\ExplicitObstacleSet.cpp" />
     <ClCompile Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\ListObstacleSet.cpp" />
     <ClCompile Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\NavMeshObstacleSet.cpp" />
@@ -428,6 +429,7 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\Events\EventTriggerFactory.h" />
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\Events\StateEvtTrigger.h" />
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\Events\StateMemberTarget.h" />
+    <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\state_population_trigger.h" />
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\ExplicitObstacleSet.h" />
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\ListObstacleSet.h" />
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\NavMeshObstacleSet.h" />
