Registering my pedestrian model

--- a/projects/g++/Plugins/CMakeLists.txt
+++ b/projects/g++/Plugins/CMakeLists.txt
@@ -40,6 +40,7 @@ ADD_SUBDIRECTORY(AgtJohansson)
 ADD_SUBDIRECTORY(AgtKaramouzas)
 ADD_SUBDIRECTORY(AgtZanlungo)
 ADD_SUBDIRECTORY(StressGas)
+ADD_SUBDIRECTORY(MyModel)
 #ADD_SUBDIRECTORY(Sample)
 
 set( CMAKE_INSTALL_ALWAYS true )
