--- a/projects/VS2015/Menge/MengeCore.vcxproj.filters
+++ b/projects/VS2015/Menge/MengeCore.vcxproj.filters
@@ -282,6 +282,9 @@
     <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\state_population_trigger.cpp">
       <Filter>Source Files\Agents\Events</Filter>
     </ClCompile>
+    <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\change_state_effect.cpp">
+      <Filter>Source Files\Agents\Events</Filter>
+    </ClCompile>
     <ClCompile Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\ExplicitObstacleSet.cpp">
       <Filter>Source Files\Agents\ObstacleSets</Filter>
     </ClCompile>
@@ -819,6 +822,9 @@
       <Filter>Header Files\Agents\Events</Filter>
     </ClInclude>
     <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\state_population_trigger.h">
+      <Filter>Header Files\Agents\Events</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\mengeCore\Agents\Events\change_state_effect.h">
       <Filter>Header Files\Agents\Events</Filter>
     </ClCompile>
     <ClInclude Include="$(SrcDir)\mengeCore\Agents\ObstacleSets\ExplicitObstacleSet.h">
